# rust-api-clean-arquitecture

./: Cargo.toml  docker-compose.yml
src/: config.rs  main.rs
src/internal/: mod.rs  user.rs
src/internal/plataform/: mod.rs
src/internal/plataform/storge/: mod.rs  mongo.rs  user_repository.rs
src/internal/users/: create.rs  delete.rs  get.rs  mod.rs
src/rest/: mod.rs  users.rs
