[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1"
mongodb = "2.3.1"
async-trait = "0.1.58"
lazy_static = "1.4.0"
actix-rt = "2.7.0"
mockall = "0.11.3"
fake = { version = "2.5", features=['derive']}
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
